Upgrade sparql-anything jar to v1.1.0, move to ports, and fix execution crashes (#2)
* Upgrade jar to v1.1.0 and fix version-agnostic download check

The SPARQL Anything jar is now pinned to v1.1.0. has_jar() previously
returned True if any .jar existed in the install folder, so after a
version bump the stale jar suppressed the new download silently. It now
checks for the specific versioned jar. Also tidy the download url
docstring and add regression tests.

CMEM-7882

* Replace file dropdown parameter with a file input port

The plugin now receives its resource file via a FixedSchemaPort using
FileEntitySchema instead of a project-resource dropdown, so it can
also process files coming from upstream tasks (not just project
resources).

* Replace graph upload with a triple output port

Instead of posting query results directly to a named graph, the
plugin now parses the SPARQL Anything Turtle output into RDF quads
and emits them via a FixedSchemaPort(QuadEntitySchema), so downstream
tasks decide what to do with the triples (write to a graph, filter,
transform, etc).

* Document the new file input port and triple output port

README-public.md and the in-app plugin documentation still described
the removed dropdown and graph parameters; update both to describe
how the file is now supplied and the results consumed via ports.

* Request N-Triples output from the jar instead of Turtle

Jena's Turtle writer can produce prefixed names (e.g. facade-x
predicates derived from arbitrary source field names) that rdflib's
Turtle parser rejects with BadSyntax. N-Triples has no prefixes or
abbreviated local names, avoiding that class of writer/reader
mismatch entirely.

* Stop passing the removed -Djava.security.manager flag to the jar

JDK 24+ (JEP 486) permanently removed the Security Manager API, so on
hosts running a current JDK the flag made the jar's JVM fail to start
immediately. Its "Error occurred during initialization of VM" message
landed on stdout and was then fed to th